namespace Domain.Enums
{
    public enum ApprovalDecision
    {
        Approve = 0,
        Reject = 1,
        RequestMoreInfo = 2,
    }
}
