
namespace Domain.Enums
{
    public enum ApprovalStatus
    {
        Pending = 0,
        Approved = 1,
        Rejected = 2,
        OnHold = 3,
        Cancelled = 4
    }
}
